--- a/css/sass/partials/_responsive.scss
+++ b/css/sass/partials/_responsive.scss
@@ -1,7 +1,9 @@
 
+$media-xs: 420px;
 $media-s: 767px;
 $media-m: 992px;
 $media-l: 1260px;
+
 
 
 //-------- [LARGE] PRESET MEDIA QUERIES ------------------------------------------
