--- a/css/sass/sections/_footer.scss
+++ b/css/sass/sections/_footer.scss
@@ -72,6 +72,7 @@ footer {
         h2 {
             -ms-flex: 1 0 100%;
             flex-basis: 100%;
+            margin-bottom: 17px;
         }
 
         //-----   SOCIAL HOVER STYLES
